--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,4 @@
-﻿/*=============================================================
-    Authour URI: www.binarytheme.com
-    License: Commons Attribution 3.0
-
-    http://creativecommons.org/licenses/by/3.0/
-
-    100% To use For Personal And Commercial Use.
-    IN EXCHANGE JUST GIVE US CREDITS AND TELL YOUR FRIENDS ABOUT US
-   
-    ========================================================  */
-
-/* =============================================================
-   GENERAL STYLES
- ============================================================ */
-body {
+﻿body {
     font-family: 'Open Sans', sans-serif;
     line-height: 30px;
     font-size: 14px;
@@ -28,7 +14,7 @@ body {
 }
 
 /*=====================================
-  NAVBAR STYLES 
+NAVBAR STYLES 
     ===================================*/
 
 .logo-custom {
@@ -66,6 +52,16 @@ body {
     border-top: none;
     margin-top: 20px;
 }
+
+
+/* p {
+    color: rgba(28, 43, 75, 1);
+    color: #333;
+    color: #005E5A;
+    color: #1A94C4;
+    color: #2f9484;
+    color: #2d3d5a;
+} */
 
 
 /*=====================================
@@ -216,7 +212,7 @@ h1::after {
   FACULTY STYLES 
   ===================================*/
 #faculty-sec {
-    background-color: #000;
+    background: rgba(38, 57, 88, 1);
     color: #fff;
 }
 
@@ -288,7 +284,7 @@ h1::after {
   ===================================*/
 #footer {
     padding: 5px 20px;
-    background-color: #2d3d5a;
+    background: rgba(38, 57, 88, 1);
     text-align: right;
     color: #fff;
     font-size: 15px;
@@ -360,4 +356,145 @@ h1::after {
     font-size: larger;
     text-decoration: none;
     color: white;
+}
+
+.card-container {
+    padding: 20px;
+    border-radius: 10px;
+}
+
+
+.card {
+    background-color: #fff;
+    color: #333;
+    border-radius: 10px;
+    width: 300px;
+    height: 220px;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s, transform 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    transform: scale(1.05);
+}
+
+.card i {
+    margin-top: 10px !important;
+    transition: color 0.3s;
+}
+
+.card:hover i {
+    color: #1A94C4;
+}
+
+.bi {
+    font-size: 50px;
+    transition: color 0.3s;
+}
+
+.card:hover .bi {
+    color: #1A94C4;
+}
+
+
+.card-content {
+    padding: 15px;
+    text-align: center;
+}
+
+.card-content h1 {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.card h1 {
+    margin: 10px 0;
+    font-size: 1.5em;
+    transition: color 0.3s;
+}
+
+.card:hover h1 {
+    color: #1A94C4;
+}
+
+.card p {
+    margin: 0;
+    font-size: 1em;
+}
+
+.classes-work {
+    background: rgba(38, 57, 88, 1);
+    color: #fff;
+}
+
+.classes-work h1,
+.classes-work p {
+    color: white;
+}
+
+.classes-container {
+    display: flex;
+    padding: 0 50px;
+    justify-content: space-between;
+}
+
+.mobile-container {
+    display: none;
+}
+
+.class-item {
+    flex: 1;
+    text-align: center;
+    margin: 10px;
+}
+
+.class-item h3 {
+    color: #5bc0de;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.bi-arrow-right,
+.bi-arrow-down {
+    margin: 30px;
+}
+
+@media (max-width: 767px) {
+    .classes-container {
+        display: none;
+    }
+
+    .mobile-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .bi-arrow-right,
+    .bi-arrow-down {
+        margin: 10px;
+    }
+}
+
+.subject-container h2 {
+    font-size: 24px;
+    font-weight: bold;
+    color: rgba(38, 57, 88, 1);
+}
+
+
+.subject-container ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.subject-container li {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
