--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@
     font-family: 'Open Sans', sans-serif;
     line-height: 30px;
     font-size: 14px;
+    margin: 0;
+    padding: 0;
 }
 
 .set-pad {
@@ -212,7 +214,7 @@ h1::after {
   FACULTY STYLES 
   ===================================*/
 #faculty-sec {
-    background: rgba(38, 57, 88, 1);
+    background: rgba(28, 43, 75, 1);
     color: #fff;
 }
 
@@ -257,17 +259,8 @@ h1::after {
 #contact-sec {
     padding-top: 10px;
     padding-bottom: 60px;
-    background: url(../img/contact.jpg) no-repeat center center;
-    padding: 0;
-    -webkit-background-size: cover;
-    background-size: cover;
     color: #fff;
-    background-attachment: fixed;
-}
-
-#contact-sec .overlay {
-    background: rgba(0, 0, 0, 0.76);
-    min-height: 600px;
+    background-color: rgba(28, 43, 75, 1)
 }
 
 #contact-sec h1 {
@@ -284,7 +277,7 @@ h1::after {
   ===================================*/
 #footer {
     padding: 5px 20px;
-    background: rgba(38, 57, 88, 1);
+    background: rgba(28, 43, 75, 0.89);
     text-align: right;
     color: #fff;
     font-size: 15px;
@@ -312,9 +305,9 @@ h1::after {
 
 /* Section: Counters */
 .section-counters {
-    background: url(../img/counters-bg.png) repeat fixed center / contain;
+    background: white;
     width: 100%;
-    padding: 100px 0;
+    padding: 30px 0;
     position: relative;
 }
 
@@ -325,37 +318,39 @@ h1::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
 }
 
 .section-counters h4 {
-    color: #fff;
-    /* margin: 25px 0 0; */
+    font-weight: bold;
 }
 
 .site-section p.counter {
     font-size: 100px;
     font-weight: 300;
-    color: #fff;
+    color: rgba(28, 43, 75, 1);
     margin: 0;
-    line-height: 0.8;
+    line-height: 1.25;
 }
 
-
-#details-sec {
-    background: url(../img/details.jpg) no-repeat center center;
-    padding: 30px 50px;
-    -webkit-background-size: cover;
-    background-size: cover;
-    color: white;
-}
-
-#details-sec a {
+.contact a {
     text-emphasis: none;
     font-weight: bolder;
     font-size: larger;
     text-decoration: none;
     color: white;
+}
+
+.contact i {
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+.contact a:hover {
+    text-emphasis: none;
+    font-weight: bolder;
+    font-size: larger;
+    text-decoration: none;
+    color: #2f9484;
 }
 
 .card-container {
@@ -427,7 +422,7 @@ h1::after {
 }
 
 .classes-work {
-    background: rgba(38, 57, 88, 1);
+    background: rgba(28, 43, 75, 1);
     color: #fff;
 }
 
@@ -479,12 +474,17 @@ h1::after {
     .bi-arrow-down {
         margin: 10px;
     }
+
+    .why-si {
+        flex-direction: column;
+        text-align: center;
+    }
 }
 
 .subject-container h2 {
     font-size: 24px;
     font-weight: bold;
-    color: rgba(38, 57, 88, 1);
+    color: rgba(28, 43, 75, 1);
 }
 
 
@@ -497,4 +497,31 @@ h1::after {
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
+}
+
+.why-si {
+    display: flex;
+    column-gap: 20px;
+    align-items: center;
+}
+
+.why-si h4 {
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.sticky-circle-button {
+    position: fixed;
+    right: 0;
+    bottom: 10%;
+    margin-right: 0;
+    border-radius: 10px;
+    padding: 5px 20px;
+    background: none;
+    color: white;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
