--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,7 +363,7 @@ h1::after {
     background-color: #fff;
     color: #333;
     border-radius: 10px;
-    width: 300px;
+    /* width: 300px; */
     height: 230px;
     padding: 10px;
     margin: 10px;
